framec_tests/language_specific/java/v3_mir/positive/forward_inline_semicolon.frm
@target java

system S {
    machine:
        $A => $P {
            e() {
                => $^; native();
            }
        }
        $P { }
}
