framec_tests/language_specific/java/v3_mir/negative/transition_unknown_state.frm
@target java

system S {
    machine:
        $A {
            e() {
                -> $ZZ();
            }
        }
}

